[jdk9] fix jconsole.jar / tools.jar deps